@@ -1,3 +1,13 @@
+2020-06-27  Stephan Szabo  <stephan.szabo@sony.com>
+
+        [PlayStation] Update test runner for changes to Options and signing
+        https://bugs.webkit.org/show_bug.cgi?id=213650
+
+        Reviewed by Don Olmstead.
+
+        * shell/playstation/Initializer.cpp: Load ICU library
+        * shell/playstation/TestShell.cpp: Update between test options reset
+
 2020-06-26  Geoffrey Garen  <ggaren@apple.com>
 
         Initializing the main thread should initialize the main run loop
